# xdg-desktop-portal-hyprland

./: .gitignore  CMakeLists.txt  README.md  hyprland.portal  meson.build
contrib/systemd/: xdg-desktop-portal-hyprland.service.in
hyprland-eis/: CMakeLists.txt  meson.build
hyprland-eis/src/: config.h  main.cpp  main.h
hyprland-eis/src/util/: util-bits.cpp  util-bits.h  util-color.h  util-io.cpp  util-io.h  util-list.cpp  util-list.h  util-logger.cpp  util-logger.h  util-macros.h  util-mem.h  util-memfile.cpp  util-memfile.h  util-memmap.cpp  util-memmap.h  util-object.h  util-sources.cpp  util-sources.h  util-strings.cpp  util-strings.h  util-structs.h  util-time.h  util-tristate.h  util-version.h
protocols/: meson.build
src/: meson.build
src/core/: PortalManager.cpp  PortalManager.hpp
src/portals/: GlobalShortcuts.cpp  RemoteDesktop.cpp  RemoteDesktop.hpp
